controls/menu/menu.css
.menuButton
{
    display:       inline-block;
    font-family:   Inter, sans-serif;
    font-size:     11px;
    width:         50px;
    height:        40px;
    background:    #2c2c2c;
    border-radius: 0;
    min-width:     0;
    min-height:    0;
    border:        none;
    position:      relative;
    padding:       0;
    color:         #fff;
    overflow:      hidden;
    cursor:        default;
    /* box-shadow:    0 0 0 1px red inset; */
}


.menuButton:hover
{
    /* background: black; */
    color:      white;
}


.menuButtonIcon
{
    display:             inline-block;
    width:               30px;
    height:              40px;
    /* box-shadow: 0 0 0 1px yellow inset; */
}


.menuButtonArrow
{
    display:             inline-block;
    width:               20px;
    height:              40px;
    background:          url('data:image/svg+xml;utf8,<svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.507593 1.22627L1.2469 0.498783L4.01388 3.22151L6.78084 0.498783L7.52015 1.22627L4.01388 4.67648L0.507593 1.22627Z" fill="white"/></svg>');
    background-position: 50% 50%;
    background-repeat:   no-repeat;
    transition:          0.25s;
    /* box-shadow: 0 0 0 1px magenta inset; */
}


.menu
{
    display:          none;
    position:         absolute;
    width:            auto;
    height:           auto;
    padding:          8px 0 8px 0;
    border-radius:    2px;
    font-family:      Inter, sans-serif;
    font-size:        11px;
    overflow:         hidden;
    overflow-y:       hidden;
    color:            #eee;
    background-color: #1e1e1e;
    z-index:          100000;
}


.menu::-webkit-scrollbar
{
    background: transparent;
    width:      6px;
}


.menu::-webkit-scrollbar-track
{
    margin: 4px 4px 4px 0;
}


.menu::-webkit-scrollbar-thumb
{
    background:    #fff4;
    border-radius: 3px;
}


.menuItems
{
    display:          inline-block;
    height:           fit-content;
    /* box-shadow:       0 0 0 1px red inset; */
}


.figma-light .menu
{
    box-shadow: 0px 2px  7px rgba(0, 0, 0, 0.15),
                0px 5px 17px rgba(0, 0, 0, 0.15);
}


.figma-dark .menu
{
    box-shadow: 0px 2px  7px rgba(0, 0, 0, 0.45),
                0px 5px 25px rgba(0, 0, 0, 0.45),
                0 0px 2px 0px #fff3 inset;
}


.menuArrow
{
    content:      '';
    position:     absolute;
    margin-left:  -7px;
    border-width: 7px;
    border-style: solid;
    border-color: transparent transparent #1e1e1e transparent;
    display:      none;
    opacity:      0%;
    box-shadow:   0 0px 2px 0px #fff3 inset;
    z-index:      20000;
}


.menuItem
{
    display:     inline-block;
    width:       100%;
    height:      auto;
    font-family: Inter, sans-serif;
    font-size:   12px;
    position:    relative;
    /* box-shadow:  0 0 0 1px red inset; */
}


.menuItemHighlight
{
    display:        block;
    position:       absolute;
    height:         25px;
    pointer-events: none;
}


.menuItemLegend
{
    display:             block;
    position:            absolute;
    width:               3px;
    height:              12px;
    left:                0px;
    top:                 50%;
    transform:           translateY(-50%);
    background:          transparent;
}


.menuItemColor
{
    display:             inline-block;
    width:               16px;
    height:              16px;
    border-radius:       1px;
    margin-left:         4px;
    margin-right:        4px;
    position:            relative;
    top:                 13px;
    pointer-events:      none;
}


.menuItemCheck
{
    display:             inline-block;
    width:               34px;
    height:              22px;
    background:          url('data:image/svg+xml;utf8,<svg width="9" height="9" viewBox="0 -2 9 9" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.31749 2.4477L3.42546 4.55569L7.64142 0.339716L8.9589 1.65721L3.42546 7.19067L0 3.76519L1.31749 2.4477Z" fill="white"/></svg>');
    background-position: 50% 50%;
    background-repeat:   no-repeat;
    visibility:          hidden;
    /* box-shadow:          0 0 0 1px blue inset; */
}



.menuItemIcon
{
    display:             inline-block;
    width:               34px;
    height:              22px;
    /* box-shadow:          0 0 0 1px orange inset; */
    transform:           translateY(1px);
}


.menuItemName
{
    display:     inline-block;
    position:    relative;
    font-weight: 500;
    top:        -5px;
    filter:      grayscale(); /* disables cleartype to match Figma */
}


.menuItemExpand
{
    display:             inline-block;
    width:               48px;
    height:              22px;
    background:          url('data:image/svg+xml;utf8,<svg width="6" height="9" viewBox="0 -1 6 9" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 4L0 0V8L6 4Z" fill="white"/></svg>');
    background-position: 50% 50%;
    background-repeat:   no-repeat;
    visibility:          hidden;
    position:            absolute;
    right:               0;
}


.menuItemShortcut
{
    display:                  inline-block;
    position:                 absolute;
    right:                    16px;
    transform:                translateY(5px);
    font-variant-alternates:  stylistic(), styleset();
    font-feature-settings:   'salt' on, 'ss02' on;
    filter:                   grayscale(); /* disables cleartype to match Figma */
}


.menuItemSubscribe
{
    display:        inline-block;
    position:       absolute;
    right:          16px;
    font-size:      10.5px;
    font-weight:    700;
    color:          #09f8;
    transform:      translateY(2px);
    background:     #1e1e1e;
    box-shadow:     0 0 0 1px #09f8 inset;
    margin-top:     1px;
    padding-left:   7px;
    padding-right:  7px;
    padding-top:    3px;
    padding-bottom: 2px;
    border-radius:  3px;
}


.disambiguate
{
    font-variant-alternates: stylistic(), styleset();
    font-feature-settings:   'salt' on, 'ss02' on;
}


.menuSeparator
{
    display:    inline-block;
    width:      100%;
    height:     1px;
    background: #383838;
    margin:     8px 0 8px 0;
}

